MET-4976: Cleanup